--- a/config/mangaface/manifest/manga_male_pack.yaml
+++ b/config/mangaface/manifest/manga_male_pack.yaml
@@ -142,7 +142,7 @@ scripts:
         item_index: 1
       # Draw shirt
       - command_name: draw_shirt_command
-        item_index: 1
+        item_index: 5
         color: white
       # Draw filled_background
       - command_name: draw_filled_background_command
@@ -153,6 +153,8 @@ commands:
   # Draw body_shape
   - name: draw_body_shape_command
     item_count: 1
+    color_dependency: draw_head_shape_command
+    default_color: plain
     item_preview_url: ''
     protected: true
     subscribed_layers:
@@ -196,19 +198,19 @@ commands:
   # Draw nose
   - name: draw_nose_command
     item_count: 34
-    item_preview_url: <BASE_URL>/manga_male_pack/interface/design_preview/nose_shapes/<ITEM>.gif
-    movement_limit: 2
     color_dependency: draw_head_shape_command
     default_color: plain
+    item_preview_url: <BASE_URL>/manga_male_pack/interface/design_preview/nose_shapes/<ITEM>.gif
+    movement_limit: 2
     subscribed_layers:
       - nose_layer
   # Draw mouth
   - name: draw_mouth_command
     item_count: 23
-    item_preview_url: <BASE_URL>/manga_male_pack/interface/design_preview/mouth_shapes/<ITEM>.gif
-    movement_limit: 2
     color_dependency: draw_head_shape_command
     default_color: plain
+    item_preview_url: <BASE_URL>/manga_male_pack/interface/design_preview/mouth_shapes/<ITEM>.gif
+    movement_limit: 2
     subscribed_layers:
       - mouth_layer
   # Draw mustache
