--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,33 @@
-/.idea
-/.vscode
+# MangaFace
+vendor
+composer.lock
+public/*
+!public/assets
+!public/image.php
+web/*
+!web/index.html
 
-/vendor
-/node_modules
-/composer.lock
-/package-lock.json
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-/public/app_bundle.js
-/public/data/
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
