--- a/composer.json
+++ b/composer.json
@@ -30,9 +30,9 @@
   },
   "autoload": {
     "psr-4": {
-        "MangaFace\\": "src/"
+        "MangaFace\\": "server/"
     },
-    "files": ["src/config.php"]
+    "files": ["server/config.php"]
   },
   "require": {
     "php": ">=8.1",
