--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
-  "name": "MangaFace",
-  "version": "0.2",
-  "description": "Create your own custom avatar.",
+  "name": "mangaface-web-client",
   "private": true,
+  "version": "0.2.0",
+  "type": "module",
   "scripts": {
-    "build": "webpack",
-    "dev": "http-server -o",
-    "test": "http-server ./ -p 8081 -o /web-client/tests/ui/index.html"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "server": "http-server public/"
   },
-  "keywords": [
-    "avatar",
-    "avatar-generator",
-    "manga",
-    "graphics"
-  ],
-  "author": "Milad Abdollahnia <miladniaa@gmail.com>",
-  "license": "MIT",
-  "engines": {
-    "node": ">=6.11.5"
+  "dependencies": {
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.35.0",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.2",
+    "eslint": "^9.35.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.4.0",
     "http-server": "^14.1.1",
-    "webpack": "^5.100.2",
-    "webpack-cli": "^6.0.1"
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.43.0",
+    "vite": "^7.1.6"
   }
 }
