refactor: replace repositories with a single 'manifest' object
- setup Jest

--- a/.env.prod
+++ b/.env.prod
@@ -1,2 +1,2 @@
-ASSETS_BASE_URL="https://miladnia.github.io/MangaFace"
+STATIC_BASE_URL=https://miladnia.github.io/MangaFace
 API_PRETTY_MANIFEST=false
