--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "http-server public/"
+    "server": "http-server public/",
+    "test": "jest"
   },
   "dependencies": {
     "react": "^19.1.1",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
+    "@types/jest": "^30.0.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
@@ -24,6 +26,8 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
     "http-server": "^14.1.1",
+    "jest": "^30.1.3",
+    "ts-jest": "^29.4.4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.43.0",
     "vite": "^7.1.6"
