--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "server": "http-server public/",
-    "test": "jest"
+    "test": "jest",
+    "man": "node ./scripts/build_static_manifest.js",
+    "setup": "npm run man",
+    "up": "npm run build && npm run server"
   },
   "dependencies": {
     "react": "^19.1.1",
@@ -21,6 +24,7 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
+    "dotenv": "^17.2.2",
     "eslint": "^9.35.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
@@ -30,7 +34,8 @@
     "ts-jest": "^29.4.4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.43.0",
-    "vite": "^7.1.6"
+    "vite": "^7.1.6",
+    "yaml": "^2.8.1"
   },
   "engines": {
     "node": "^20.19.0 || >=22.12.0"
