chore: new structure for files and directories

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,7 +21,16 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    /* App */
+    "baseUrl": "./src",
+    "paths": {
+      "@domain/*": ["domain/*"],
+      "@data/*": ["data/*"],
+      "@view/*": ["view/*"],
+      "@ui/*": ["ui/*"]
+    }
   },
-  "include": ["src"]
+  "include": ["src", "tests"]
 }
